cabal-version:      3.0
name:               fsmbuilder
version:            0.1.0.0
license:            Apache-2.0
author:             ArneDuyver
maintainer:         arne_duyver@hotmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable fsmbuilder
    build-depends:    base >=4.17.2.1 && <4.20
                    , rfrlibrary
                    , aeson
                    , mustache
                    , xml-conduit
                    , xml
                    , containers
                    , directory
                    , filepath
                    , text
                    , unordered-containers
                    , yaml
                    , vector
                    , scientific 
    other-modules: InputBuilder, FsmBuilder, MixedBuilder, OutputBuilder, GraphBuilder
    hs-source-dirs:   src
    default-extensions: OverloadedStrings, ImportQualifiedPost
    default-language: Haskell2010
    main-is:          Main.hs

