cabal-version:      3.0
name:               fsmfrontend
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             ArneDuyver
maintainer:         arne_duyver@hotmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  FsmFrontend
    build-depends:    base >=4.17.2.1 && <4.20
                    , process
                    , threepenny-gui
    hs-source-dirs:   src
    default-language: Haskell2010

executable fsmfrontend
    build-depends:    base >=4.17.2.1 && <4.20
                    , fsmfrontend
                    , process
                    , threepenny-gui
    hs-source-dirs:   src
    default-language: Haskell2010
    main-is:          Main.hs

